corrigido erro da tabela tipos